fix spacing of certain nodes

--- a/styles/attempt-quiz.scss
+++ b/styles/attempt-quiz.scss
@@ -68,6 +68,9 @@
     align-items: center;
   }
 }
+.score-text {
+padding-left: 1em;
+}
 
 .gif {
   padding-top: 0.75em;
